2004-08-02  Ilja Booij  <ilja@ic-s.nl>

	* config.c (ReadConfig): changed malloc and free to  my_malloc and 
	my_free. Added code to prevent memory leakage in event of errors.
	(config_free): changed free() to my_free()

2004-07-27  Aaron Stone  <aaron@serendipity.cx>

	* main.c: added support for address+mailbox@host syntax, needed for 
	integration with amavis-new and others, also adding the -M option to
	be able to override the "address detail mailbox."

2004-07-24  Aaron Stone  <aaron@serendipity.cx>

	* man/dbmail-users.1, man/dbmail-util.1, man/dbmail-smtp.1: updated
	several options and polished out a few formatting problems.

2004-07-24  Aaron Stone  <aaron@serendipity.cx>

	* main.c, user.c, vut2dbmail.c, maintenance.c: improved handling
	of several common command line options and added more comments.
	* user.c: fixed missing options in the optstring argument to getopt.
	* user.c: added prompt and processing for password on stdin.

2004-07-22  Aaron Stone  <aaron@serendipity.cx>

	* db.c: added acl, pbsp and subscription to the list of tables
	and added the dbmail_ prefix to them in all queries.
	* db.c: also added auto_replies and auto_notifications to the 
	list of tables and added the dbmail_ prefix to them in all queries.
	* contrib/startup-scripts/gentoo/dbmail-lmtpd,imapd,pop3d:
	pidfiles now go into /var/run rather than /var/run/dbmail
	as most people won't have that directory already existing.
	* pidfile.c (pidfile_create): added an fflush call so that filesystems
	like XFS which cache agressively will be forced to write out the pid.
	* pidfile.c (pidfile_remove): added atexit call so that the
	pidfile is cleaned up upon program termination.

2004-07-21  Aaron Stone  <aaron@serendipity.cx>

	* user.c: overhaul of argument handling ended up being a near
	rewrite of the entire utility. possibly added GCC style macro
	dependencies; they should be supplemented with portable code.
	* main.c, maintenance.c, vut2dbmail.c: improved command line